erDiagram

TENANT_REGISTRY ||--o{ USER_REGISTRY : owns
TENANT_REGISTRY ||--o{ SKU_MASTER : owns
TENANT_REGISTRY ||--o{ CHANNEL_MASTER : owns
TENANT_REGISTRY ||--o{ SUPPLIER_MASTER : owns
TENANT_REGISTRY ||--o{ FIELD_REGISTRY : scopes
TENANT_REGISTRY ||--o{ METRIC_REGISTRY : scopes
TENANT_REGISTRY ||--o{ FACTOR_REGISTRY : scopes
TENANT_REGISTRY ||--o{ MODEL_REGISTRY : scopes
TENANT_REGISTRY ||--o{ GATE_REGISTRY : scopes
TENANT_REGISTRY ||--o{ CAPITAL_POOL : scopes
TENANT_REGISTRY ||--o{ RISK_BUDGET : scopes
TENANT_REGISTRY ||--o{ PORTFOLIO_REGISTRY : scopes
TENANT_REGISTRY ||--o{ AUDIT_LOG : scopes

FIELD_REGISTRY ||--o{ METRIC_DEPENDENCIES : feeds
METRIC_REGISTRY ||--o{ METRIC_DEPENDENCIES : depends_on
METRIC_REGISTRY ||--o{ FACTOR_COMPONENTS : aggregates
FACTOR_REGISTRY ||--o{ FACTOR_COMPONENTS : composed_of
FACTOR_REGISTRY ||--o{ MODEL_INPUTS : inputs
MODEL_REGISTRY ||--o{ MODEL_INPUTS : consumes
MODEL_REGISTRY ||--o{ MODEL_RESULTS : produces
GATE_REGISTRY ||--o{ GATE_CONDITIONS : evaluates
GATE_REGISTRY ||--o{ DECISION_LOG : produces
CAPITAL_POOL ||--o{ DECISION_LOG : constrains
RISK_BUDGET ||--o{ DECISION_LOG : constrains
DECISION_LOG ||--o{ EXECUTION_FEEDBACK : feedback
DECISION_LOG ||--o{ AUDIT_LOG : logs
PORTFOLIO_REGISTRY ||--o{ PORTFOLIO_POSITIONS : holds
